@@ -558,19 +558,29 @@ $job = $worker->register->dequeue(0);
 is $job->id, $id, 'right id';
 is $job->retries, 0, 'job has not been retried';
 $job->perform;
-is $job->info->{attempts}, 2,          'job will be attempted twice';
-is $job->info->{state},    'inactive', 'right state';
-is $job->info->{result}, 'Non-zero exit status (1)', 'right result';
-ok $job->info->{retried} < $job->info->{delayed}, 'delayed timestamp';
+$info = $job->info;
+is $info->{attempts}, 2,                          'job will be attempted twice';
+is $info->{state},    'inactive',                 'right state';
+is $info->{result},   'Non-zero exit status (1)', 'right result';
+ok $info->{retried} < $info->{delayed}, 'delayed timestamp';
 $minion->backend->sqlite->db->query(
   q{update minion_jobs set delayed = datetime('now') where id = ?}, $id);
 $job = $worker->register->dequeue(0);
 is $job->id, $id, 'right id';
 is $job->retries, 1, 'job has been retried once';
 $job->perform;
-is $job->info->{attempts}, 2,        'job will be attempted twice';
-is $job->info->{state},    'failed', 'right state';
-is $job->info->{result}, 'Non-zero exit status (1)', 'right result';
+$info = $job->info;
+is $info->{attempts}, 2,                          'job will be attempted twice';
+is $info->{state},    'failed',                   'right state';
+is $info->{result},   'Non-zero exit status (1)', 'right result';
+ok $job->retry({attempts => 3}), 'job retried';
+$job = $worker->register->dequeue(0);
+is $job->id, $id, 'right id';
+$job->perform;
+$info = $job->info;
+is $info->{attempts}, 3,        'job will be attempted three times';
+is $info->{state},    'failed', 'right state';
+is $info->{result}, 'Non-zero exit status (1)', 'right result';
 $worker->unregister;
 
 # Multiple attempts during maintenance
@@ -706,16 +716,21 @@ ok $job->finish, 'job finished';
 $worker->unregister;
 
 # Foreground
-$id  = $minion->enqueue('test');
+$id  = $minion->enqueue(test => [] => {attempts => 2});
 $id2 = $minion->enqueue('test');
 $id3 = $minion->enqueue(test => [] => {parents => [$id, $id2]});
 ok !$minion->foreground($id3 + 1), 'job does not exist';
 ok !$minion->foreground($id3), 'job is not ready yet';
+$info = $minion->job($id)->info;
+is $info->{attempts}, 2,          'job will be attempted twice';
+is $info->{state},    'inactive', 'right state';
+is $info->{queue},    'default',  'right queue';
 ok $minion->foreground($id), 'performed first job';
 $info = $minion->job($id)->info;
-is $info->{retries}, 1,                   'job has been retried';
-is $info->{state},   'finished',          'right state';
-is $info->{queue},   'minion_foreground', 'right queue';
+is $info->{attempts}, 1,                   'job will be attempted once';
+is $info->{retries},  1,                   'job has been retried';
+is $info->{state},    'finished',          'right state';
+is $info->{queue},    'minion_foreground', 'right queue';
 ok $minion->foreground($id2), 'performed second job';
 $info = $minion->job($id2)->info;
 is $info->{retries}, 1,                   'job has been retried';
