@@ -1,5 +1,6 @@
 {{$NEXT}}
   - Add id option to dequeue method to support dequeueing a specific job.
+  - Add attempts option to retry_job method.
 
 2.001     2017-07-20 02:40:46 EDT
   - Bump Mojo::SQLite requirement to 3.000 to support sharing the database
